flux-clusters/dev-cluster/flux-system/mydeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: wave2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: httpd:2.4
          ports:
            - containerPort: 80
