flux-clusters/dev-cluster/flux-system/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-only
  namespace: wave2
spec:
  podSelector:
    matchLabels:
      app: httpd
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
